add sem shading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a class="ui primary button" onclick="updateRenderer()" style="position: relative;">Re-Render</a>
               <div class="or" data-text="AS"></div>
               <div class="ui dropdown button" style="position: relative;">
-                <input type="hidden" value="galvanizedTexture.jpg" id="texture">
+                <input type="hidden" value="matcap2.jpg" id="texture">
                 <i class="dropdown icon"></i>
                 <div class="default text">select render texture</div>
                 <div class="menu">
@@ -28,6 +28,7 @@
                   <div class="item" data-value="moon.gif">moon</div>
                   <div class="item" data-value="red.jpg">red</div>
                   <div class="item" data-value="frontcolor">Item Front Color</div>
+                  <div class="item" data-value="matcap2.jpg">black</div>
                 </div>
               </div>
             </div>
@@ -82,13 +83,15 @@
               </div>
             </div>
             <div class="ui dropdown" style="position: relative;">
-              <input type="hidden" value="gouraud-" id="shading2">
+              <input type="hidden" value="sem-fragment-" id="shading2">
               <i class="dropdown icon"></i>
-              <div class="default text">select #1 shading</div>
+              <div class="default text">select #2 shading</div>
               <div class="menu">
                 <div class="item" data-value="flat-">flat</div>
                 <div class="item" data-value="gouraud-">gouraud</div>
                 <div class="item" data-value="phong-">phong</div>
+                <div class="item" data-value="sem-vertex-">spherical enviorment (feat.gouraud)</div>
+                <div class="item" data-value="sem-fragment-">spherical enviorment (feat.phong)</div>
               </div>
             </div>
           </div>
@@ -243,6 +246,82 @@
 
 
 </body>
+<script id="sem-fragment-fragmentShader" type="x-shader/x-fragment">
+  precision mediump float;
+  uniform sampler2D uSampler;
+  varying vec3 e;
+  varying vec3 n;
+
+  void main(void) {
+		vec3 r = reflect( e, n );
+		float m = 2.0 * sqrt( pow( r.x, 2.0 ) + pow( r.y, 2.0 ) + pow( r.z + 1.0, 2.0 ) );
+		vec2 vN = r.xy / m + 0.5;
+    vec3 base = texture2D( uSampler, vN ).rgb;
+    gl_FragColor = vec4( base, 1. );
+  }
+</script>
+<script id="sem-fragment-vertexShader" type="x-shader/x-vertex">
+  precision mediump float;
+
+  attribute vec3 aVertexPosition;
+  attribute vec3 aVertexNormal;
+  attribute vec2 aTextureCoord;
+  attribute vec3 aVertexFrontColor;
+
+  uniform mat4 uMVMatrix;
+  uniform mat4 uPMatrix;
+  uniform mat3 uNMatrix;
+
+  varying vec3 e;
+  varying vec3 n;
+
+	void main(void) {
+    vec4 pos = vec4(aVertexPosition, 1.0);
+    e = normalize(vec3(uMVMatrix * vec4(aVertexPosition, 1.0)));
+		n = normalize( uNMatrix * aVertexNormal );
+		gl_Position = uPMatrix * uMVMatrix * pos;
+	}
+</script>
+<script id="sem-vertex-fragmentShader" type="x-shader/x-fragment">
+  precision mediump float;
+  uniform sampler2D uSampler;
+
+  varying vec3 e;
+  varying vec3 n;
+
+  void main(void) {
+    vec3 r = reflect( e, n );
+    float m = 2. * sqrt( pow( r.x, 2. ) + pow( r.y, 2. ) + pow( r.z + 1., 2. ) );
+    vec2 vN = r.xy / m + .5;
+
+    vec3 base = texture2D( uSampler, vN ).rgb;
+    gl_FragColor = vec4( base, 1. );
+  }
+</script>
+<script id="sem-vertex-vertexShader" type="x-shader/x-vertex">
+  precision mediump float;
+
+  attribute vec3 aVertexPosition;
+  attribute vec3 aVertexNormal;
+  attribute vec2 aTextureCoord;
+  attribute vec3 aVertexFrontColor;
+
+  uniform mat4 uMVMatrix;
+  uniform mat4 uPMatrix;
+  uniform mat3 uNMatrix;
+
+	varying vec2 vN;
+	void main(void) {
+    vec4 pos = vec4(aVertexPosition, 1.0);
+    vec3 e = normalize(vec3(uMVMatrix * vec4(aVertexPosition, 1.0)));
+		vec3 n = normalize( uNMatrix * aVertexNormal );
+		vec3 r = reflect( e, n );
+		float m = 2.0 * sqrt( pow( r.x, 2.0 ) + pow( r.y, 2.0 ) + pow( r.z + 1.0, 2.0 ) );
+		vN = r.xy / m + 0.5;
+		gl_Position = uPMatrix * uMVMatrix * pos;
+	}
+</script>
+
 <script id="gouraud-fragmentShader" type="x-shader/x-fragment">
   precision mediump float;
   uniform sampler2D uSampler;
@@ -315,7 +394,6 @@
     gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
   }
 </script>
-
 
 <script id="phong-fragmentShader" type="x-shader/x-fragment">
   precision highp float;
