add new texture

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                   <div class="item" data-value="matcap.jpg">matte red</div>
                   <div class="item" data-value="matcap2.jpg">shinny black</div>
                   <div class="item" data-value="matcap3.jpg">skin</div>
+                  <div class="item" data-value="normal.jpg">normal</div>
                   <div class="item" data-value="frontcolor">Item Front Color</div>
                 </div>
               </div>
